--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 
 <section id="inicio" class="slide hero">
   <video autoplay muted loop playsinline class="bg-video">
-    <source src="/videos/Portada.mp4" type="video/mp4">
+    <source src="https://drive.google.com/uc?export=download&id=1CadMRNbGioJgCIS29wbalkUjhEicseUj" type="video/mp4">
   </video>
 
   <div class="overlay">
@@ -193,7 +193,10 @@
 
 
       <div class="video-container">
-        <video src="videos/GMN_Imagina.mp4" controls></video>
+        <video controls>
+          <source src="https://drive.google.com/uc?export=download&id=1UG5-FEIWZh6nVMxJzuhDwqHdyEO-ypYH" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
 
 
