--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,16 @@
       <p style="font-style: italic;"><p5 data-key="overview.subtitle"></p5></p>
 
       <h3><span class="highlight-orange"><p5 data-key="overview.1st"></p5></span></h3>
-        <p><p5 data-key="overview.1st_par"></p5></p>
+        <p><p5 data-key="overview.1st_par1"></p5>
+          <br>
+          <p5 data-key="overview.1st_par2"></p5>
+          <br>
+          <p5 data-key="overview.1st_par3"></p5>
+          <br>
+          <p5 data-key="overview.1st_par4"></p5>
+          <br>
+          <a href="http://localhost:3000/#logros"><p5 data-key="overview.casosexito"></p5></a>
+          </p>
 
 
 
@@ -192,7 +201,12 @@
 
       <h2><span class="highlight-orange"><p5 data-key="somos.title"></p5></span></h2>
       <h3><p5 data-key="somos.intro"></p5></h3>
-        <p><p5 data-key="somos.intro_par"></p5></p>
+        <p><p5 data-key="somos.intro_par1"></p5>
+          <br>
+        <p5 data-key="somos.intro_par2"></p5>
+        <br>
+      <p5 data-key="somos.intro_par3"></p5>
+    </p>
 
 
       <!-- <div class="video-container">
@@ -311,36 +325,43 @@
   <div class="servicios-grid">
     <div class="servicio">
       <h3><p5 data-key="servicios.service1"></p5></h3>
-      <p><p5 data-key="servicios.service1_par1"></p5>
-        <br><br>
-        <p5 data-key="servicios.service1_par2"></p5>
-        <br><br>
-        <p5 data-key="servicios.service1_par3"></p5>
+      <p>
+        <span class="visible-text"><p5 data-key="servicios.service1_par1"></p5></span>
+        <span class="hidden-text" style="display: none;">
+          <br><br><p5 data-key="servicios.service1_par2"></p5>
+          <br><br><p5 data-key="servicios.service1_par3"></p5>
+        </span>
+        <br>
+        <button class="ver-mas-btn" data-target="1">Ver más</button>
       </p>
     </div>
+    
     <div class="servicio">
       <h3><p5 data-key="servicios.service2"></p5></h3>
-      <p><p5 data-key="servicios.service2_par1"></p5>
-        <br><br>
-        <p5 data-key="servicios.service2_par2"></p5>
-        <br><br>
-        <p5 data-key="servicios.service2_par3"></p5>
+      <p>
+        <span class="visible-text"><p5 data-key="servicios.service2_par1"></p5>
+          <br><br><p5 data-key="servicios.service2_par2"></p5></span>
+        <span class="hidden-text" style="display: none;">
+          <br><br><p5 data-key="servicios.service2_par3"></p5>
+          <br><br><p5 data-key="servicios.service2_par4"></p5>
+        </span>
+        <br>
+        <button class="ver-mas-btn" data-target="2">Ver más</button>
       </p>
     </div>
+    
     <div class="servicio">
       <h3><p5 data-key="servicios.service3"></p5></h3>
-      <p><p5 data-key="servicios.service3_par1"></p5>
-        <br><br>
-        <p5 data-key="servicios.service3_par2"></p5>
+      <p>
+        <span class="visible-text"><p5 data-key="servicios.service3_par1"></p5></span>
+        <span class="hidden-text" style="display: none;">
+          <br><br><p5 data-key="servicios.service3_par2"></p5>
+          <br><br><p5 data-key="servicios.service3_par3"></p5>
+        </span>
+        <br>
+        <button class="ver-mas-btn" data-target="3">Ver más</button>
       </p>
     </div>
-    <!-- <div class="servicio">
-      <h3><p5 data-key="servicios.service4"></p5></h3>
-      <p><p5 data-key="servicios.service4_par1"></p5>
-        <br><br>
-        <p5 data-key="servicios.service4_par2"></p5>
-    </p>
-    </div> -->
   </div>
 
 
@@ -430,7 +451,7 @@
       <div class="accordion-panel">
         <div class="accordion-text">
           <p><p5 data-key="filosofia.filo2_par1"></p5>
-              <br>
+              <br><br>
             <p5 data-key="filosofia.filo2_par2"></p5>
           </p>
         </div>
@@ -450,6 +471,8 @@
         <div class="accordion-content">
           <div class="accordion-text">
             <p>
+              <p5 data-key="filosofia.filo3_par0"></p5>
+              <br><br>
               <p5 data-key="filosofia.filo3_par1"></p5>
             </p>
 
@@ -485,7 +508,11 @@
         <div class="accordion-text quehacemos-content">
 
           <div class="text-column">            
-            <p><p5 data-key="filosofia.filo4_par1"></p5></p>
+            <p><p5 data-key="filosofia.filo4_par1"></p5>
+              <br><br>
+            <p5 data-key="filosofia.filo4_par2"></p5>
+            <br><br>
+          <p5 data-key="filosofia.filo4_par3"></p5></p>
 
             <div style="text-align: center;">
                 <a href="https://linkedin.com" target="_blank" class="linkedin-link">
