--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
     </div>
 
     <!-- SECOND BLOCK -->
-    <div class="news-block notop">
+    <!-- <div class="news-block notop">
       <div class="news-text">
         <h3><p5 data-key="news.2nd"></p5></h3>
         <p><p5 data-key="news.2nd_par"></p5></p>
@@ -175,7 +175,7 @@
       <div class="news-media medium-media">
         <img src="https://picsum.photos/400/600?2" alt="News Image 2">
       </div>
-    </div>
+    </div> -->
 
     <!-- THIRD BLOCK -->
     <!-- <div class="news-block">
@@ -548,8 +548,10 @@
 
 
 
-<!-- CONTACTO -->
-<!-- CONTACTO -->
+
+
+
+
 <!-- CONTACTO -->
 <section id="contacto" class="slide">
   <div class="margener">
