--- a/public/index.html
+++ b/public/index.html
@@ -308,8 +308,8 @@
     </div>
 
     <div class="image-column">
-      <img src="https://picsum.photos/400/200?5" alt="Certificación 1">
-      <img src="https://picsum.photos/400/200?6" alt="Certificación 2">
+      <img src="images/hacemos1.png" alt="Certificación 1">
+      <img src="images/hacemos2.png" alt="Certificación 2">
     </div>
   </div>
 
@@ -389,14 +389,7 @@
 
 
   <h2><span class="highlight-orange"><p5 data-key="logros.title"></p5></span></h2>
-  <!-- <h3><p5 data-key="logros.logro1"></p5></h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  <h3><p5 data-key="logros.logro2"></p5></h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  <h3><p5 data-key="logros.logro3"></p5></h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
-
-
+  
 
     <div class="carousel-container">
         <!-- Main Display -->
@@ -528,7 +521,7 @@
           </div>
 
           <div class="image-column">
-            <img src="https://picsum.photos/400/200?5" alt="Certificación 1">
+            <img src="images/collage.png" alt="Certificación 1">
           </div>
 
           
