--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
       <h2><span class="highlight-orange"><p5 data-key="overview.title"></p5></span></h2>
 
-      <p style="font-style: italic;"><p5 data-key="overview.subtitle"></p5></p>
+      <h4 style="font-style: italic;"><p5 data-key="overview.subtitle"></p5></h4>
 
 
       
@@ -150,7 +150,7 @@
     <h2><span class="highlight-orange"><p5 data-key="news.title"></p5></span></h2>
 
     <!-- FIRST BLOCK = VIDEO -->
-    <div class="news-block notop">
+    <div class="news-block notop-noborders">
       <div class="news-text">
         <h3><p5 data-key="news.1st"></p5></h3>
         <p><p5 data-key="news.1st_par"></p5></p>
@@ -272,7 +272,7 @@
 
   </div>
 
-  <p style="text-align: center !important; font-style: italic;"><p5 data-key="somos2.intro_par"></p5></p>
+  <h4 style="text-align: center !important; font-style: italic;"><p5 data-key="somos2.intro_par"></p5></h4>
 
 
   </div>
@@ -298,9 +298,9 @@
 
   <div class="quehacemos-content">
     <div class="text-column">
-      <p>
-        <p5 style="font-style: italic;" data-key="hacemos.intro"></p5>
-        <br><br>
+     
+    <h4><p5 style="font-style: italic;" data-key="hacemos.intro"></p5></h4>
+       <p>
         <p5 data-key="hacemos.intro_par1"></p5>
         <br><br>
         <p5 data-key="hacemos.intro_par2"></p5>
@@ -552,7 +552,7 @@
     <!-- Title above everything -->
     <div class="contact-header">
       <h2><span class="highlight-orange"><p5 data-key="contact.title"></p5></span></h2>
-      <p class="contact-intro"><p5 data-key="contact.intro"></p5></p>
+      <h3 class="contact-intro"><p5 data-key="contact.intro"></p5></h3>
     </div>
 
     <!-- Two columns below the title -->
@@ -708,7 +708,7 @@
     <!-- Title above everything -->
     <div class="contact-header">
       <h2><span class="highlight-orange"><p5 data-key="trabaja.title"></p5></span></h2>
-      <p class="contact-intro"><p5 data-key="trabaja.intro"></p5></p>
+      <h3 class="contact-intro"><p5 data-key="trabaja.intro"></p5></h3>
     </div>
 
     <!-- Two columns below the title -->
