ajustes scriptado y visual

--- a/public/contacto.html
+++ b/public/contacto.html
@@ -25,14 +25,14 @@
     <!-- Center: Navigation -->
     <nav class="navbar-nav">
       <ul>
-        <li><a href="#inicio"><p5 data-key="navbar1"></p5></a></li>
-        <li><a href="#overview"><p5 data-key="overview.title"></p5></a></li>
-        <li><a href="#news"><p5 data-key="news.title"></p5></a></li>
-        <li><a href="#quienes"><p5 data-key="navbar2"></p5></a></li>
-        <li><a href="#quehacemos-intro"><p5 data-key="navbar3"></p5></a></li>
-        <li><a href="#logros"><p5 data-key="navbar4"></p5></a></li>
-        <li><a href="#filosofia"><p5 data-key="navbar5"></p5></a></li>
-        <li><a href="#contacto"><p5 data-key="navbar6"></p5></a></li>
+        <li><a href="/#inicio"><p5 data-key="navbar1"></p5></a></li>
+        <li><a href="/#overview"><p5 data-key="overview.title"></p5></a></li>
+        <li><a href="/#news"><p5 data-key="news.title"></p5></a></li>
+        <li><a href="/#quienes"><p5 data-key="navbar2"></p5></a></li>
+        <li><a href="/#quehacemos-intro"><p5 data-key="navbar3"></p5></a></li>
+        <li><a href="/#logros"><p5 data-key="navbar4"></p5></a></li>
+        <li><a href="/#filosofia"><p5 data-key="navbar5"></p5></a></li>
+        <li><a href="/#contacto"><p5 data-key="navbar6"></p5></a></li>
       </ul>
     </nav>
 
