--- a/public/index.html
+++ b/public/index.html
@@ -349,7 +349,7 @@
           <br><br><p5 data-key="servicios.service1_par3"></p5>
         </span>
         <br>
-        <div class="button-wrapper"><button class="ver-mas-btn" data-target="1">Ver más</button></div>
+        <div class="button-wrapper"><button class="ver-mas-btn linkedin-link" data-target="1">Ver más</button></div>
       </p>
     </div>
     
@@ -364,7 +364,7 @@
           <br><br><p5 data-key="servicios.service2_par4"></p5>
         </span>
         <br>
-        <div class="button-wrapper"><button class="ver-mas-btn" data-target="2">Ver más</button></div>
+        <div class="button-wrapper"><button class="ver-mas-btn linkedin-link" data-target="2">Ver más</button></div>
       </p>
     </div>
     
@@ -377,7 +377,7 @@
           <br><br><p5 data-key="servicios.service3_par3"></p5>
         </span>
         <br>
-        <div class="button-wrapper"><button class="ver-mas-btn" data-target="3">Ver más</button></div>
+        <div class="button-wrapper"><button class="ver-mas-btn linkedin-link" data-target="3">Ver más</button></div>
       </p>
     </div>
   </div>
