--- a/public/index.html
+++ b/public/index.html
@@ -469,7 +469,7 @@
     
 
     <div class="accordion-item">
-      <button class="accordion-header" aria-expanded="false"><p5 data-key="filosofia.filo2"></p5></button>
+      <button class="accordion-header highlight-orange" aria-expanded="false"><p5 data-key="filosofia.filo2"></p5></button>
       <div class="accordion-panel">
         <div class="accordion-text">
           <p><p5 data-key="filosofia.filo2_par1"></p5>
@@ -484,7 +484,7 @@
 
 
     <div class="accordion-item">
-      <button class="accordion-header" aria-expanded="false">
+      <button class="accordion-header highlight-orange" aria-expanded="false">
         <p5 data-key="filosofia.filo3"></p5>
       </button>
 
@@ -523,7 +523,7 @@
 
 
     <div class="accordion-item">
-      <button class="accordion-header" aria-expanded="false"><p5 data-key="filosofia.filo4"></p5></button>
+      <button class="accordion-header highlight-orange" aria-expanded="false"><p5 data-key="filosofia.filo4"></p5></button>
       <div class="accordion-panel">
 
         
