reparacion ver logros

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
               <li><p5 data-key="overview.1st_par5"></p5></li>
             </ul>
             
-            <a href="http://localhost:3000/#logros" class="success-cases-link">
+            <a href="#logros" class="success-cases-link">
               <p5 data-key="overview.casosexito"></p5>
             </a>
           </div>
